feat: Ajout de la section About et amélioration de la navigation
- Création de la section About avec présentation personnelle
- Ajout d'un défilement fluide (smooth scroll) lors du clic sur les liens de navigation
- Implémentation d'une ligne de chronologie dans la section Expérience
- Optimisation de la détection des sections actives dans la navigation

La section About présente maintenant une introduction personnalisée, la navigation est plus fluide et la timeline offre une meilleure expérience visuelle avec son animation progressive.

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
 }
 
 .logo {
@@ -42,17 +41,22 @@
 
 .app {
   min-height: 100vh;
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
 .app__container {
   width: 100%;
   display: flex;
+  gap: 1rem;
   max-width: 1280px;
   margin: 0 auto;
 }
 
 .main {
-  padding-top: 80px; /* Pour compenser le header fixe */
+  width: 60%;
+  padding-top: 6rem;
+  padding-bottom: 6rem;
 }
 
 .blob {
