--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,10 @@
 .header {
   position: sticky;
   top: 0;
-  height: 100vh;
-  width: 600px;
-  padding: 2rem;
+  max-height: 100vh;
+  width: 40%;
+  padding-top: 6rem;
+  padding-bottom: 6rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
