feat: Ajout du lien de téléchargement CV avec animations et modification lien gitHub et Linkedin
- Ajout d'un lien de téléchargement du CV en fin de section Experience
- Implémentation d'un effet de remplissage au hover de gauche à droite
- Intégration d'une flèche React Icons avec animation
- Amélioration de l'alignement et du centrage des éléments du lien
- Positionnement du lien à droite de la section
- Mise a jour des liens Github et linkedin renvoie bien sur les bons sites

Le lien de téléchargement offre maintenant une meilleure expérience utilisateur avec des animations fluides et un design moderne.

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -3,3 +3,9 @@
   scroll-margin-top: 6rem;
   margin-bottom: 9rem;
 }
+
+.about__content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
