feat: Intégration de la page Archive et amélioration de la navigation
- Suppression du Header sur la page Archive
- Ajout d'un lien de retour vers la page d'accueil avec animation
- Restructuration du composant Archive avec main__archive
- Mise à jour du texte du lien vers "Cédrine MILESI"
- Ajustements du style :
  - Suppression de la marge supérieure
  - Correction de l'animation de la flèche au hover
  - Optimisation de la mise en page

--- a/src/App.css
+++ b/src/App.css
@@ -53,8 +53,14 @@
   margin: 0 auto;
 }
 
-.main {
+.main__home {
   width: 60%;
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.main__archive {
+  width: 100%;
   padding-top: 6rem;
   padding-bottom: 6rem;
 }
