--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -27,3 +27,8 @@
   font-size: 2rem;
   color: var(--text-primary);
 }
+@media screen and (max-width: 900px) {
+  .about {
+    margin-bottom: 4rem;
+  }
+}
