--- a/src/components/Experience/experience.css
+++ b/src/components/Experience/experience.css
@@ -188,3 +188,9 @@
   color: var(--text-primary);
   text-decoration: underline;
 }
+
+@media screen and (max-width: 900px) {
+  .experience {
+    margin-bottom: 4rem;
+  }
+}
