--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -193,4 +193,10 @@
   .experience {
     margin-bottom: 4rem;
   }
+  .timeline {
+    padding-left: 0.2rem;
+  }
+  .timeline__line {
+    left: -2px;
+  }
 }
